@@ -15,7 +15,8 @@ Changelog v1.4.1 to v1.5.0
 -Fix PixConCli JMX Query  
 -Cleanup GUI, make grouping of controls more strict
 -Reduce filesize of distribution file, remove unneeded files
--Update PixConCli, improve message handling 
+-Update PixConCli, improve message handling
+-Update Fire Generator, remove visible random pixels 
 -Update PixelInvaders firmware, use the TPM2Net protocol to send data 
    Testcase: 2 PixelInvader Panels, ColorScroll Generator, no sound update
    Framerate old fw: 35fps, Framerate new fw: 140fps -> 400% faster!
